--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "recharts": "^3.1.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.5"
